# sensor-mapper

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  build_log.txt  build_log_2.txt  laslib_log.txt  style_guide.md
antenna_patterns/: cellular_sector_example.csv  wifi_patch_example.json
src/: main.cpp
src/core/: antenna_pattern.hpp  antenna_pattern_io.hpp  antenna_pattern_library.hpp  antenna_pattern_viz.hpp  building_service.cpp  building_service.hpp  crs_transformer.cpp  crs_transformer.hpp  elevation_service.cpp  elevation_service.hpp  elevation_source.hpp  geo_math.hpp  geotiff_source.cpp  geotiff_source.hpp  lidar_source.cpp  lidar_source.hpp  log_parser.cpp  log_parser.hpp  persistence.cpp  persistence.hpp  rasterizer_utils.hpp  rf_engine.cpp  rf_engine.hpp  rf_models.hpp  sensor.cpp  sensor.hpp  sensor_optimizer.cpp  sensor_optimizer.hpp  simulation_engine.cpp  simulation_engine.hpp  tdoa_solver.cpp  tdoa_solver.hpp  terrarium_source.cpp  terrarium_source.hpp  tile_service.cpp  tile_service.hpp
src/renderer/: gpu_rf_engine.cpp  gpu_rf_engine.hpp  shader.cpp  shader.hpp
src/tests/: verify_3d_tdoa.cpp  verify_rf_models.cpp
src/ui/: antenna_pattern_3d_viewer.hpp  antenna_pattern_ui.hpp  app_ui.cpp  app_ui.hpp  image_exporter.cpp  image_exporter.hpp  map_widget.cpp  map_widget.hpp  simulation_ui.cpp  simulation_ui.hpp  texture.cpp  texture.hpp
